compiler-core/src/parse/snapshots/gleam_core__parse__tests__assignment_pattern_invalid_tuple.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    let #(a, case, c) = #(1, 2, 3)\n}\n"
---
----- SOURCE CODE

fn main() {
    let #(a, case, c) = #(1, 2, 3)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:14
  │
3 │     let #(a, case, c) = #(1, 2, 3)
  │              ^^^^ I was not expecting this

Found the keyword `case`, expected one of: 
- `)`
- a pattern
